Ref: Added overflow hidden to prevent scroll bar from showing

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 footer {
